# web3-demo-backend-rust

./: .env.dist  .gitignore  README.md  docker-compose.yaml
api/: .env.dist  Cargo.toml
api/src/: config.rs  errors.rs  helpers.rs  main.rs  routes.rs  server.rs  time.rs
api/src/handlers/: health.rs
api/src/repository/: mongodb_repo.rs
docs/: openapi.yaml
